appId:  com.mrousavy.nitro.example
---
- tapOn:
    id: "eval-screen-icon"

# - tapOn:
#     id: "eval-screen-text-input"

# - hideKeyboard

- tapOn:
    id: "eval-screen-run-button"

- assertVisible: 
   text: "Result: {}"
   optional: true


    